--- a/CSS Folder/style.css
+++ b/CSS Folder/style.css
@@ -1,10 +1,11 @@
 body {
     background-color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Bebas Neue', cursive;
     color: white
 }
 
 nav {
     background-color:white;
+    font-family: 'Shadows Into Light', cursive;
     
 }
