Updated CSS, Index Page, fixed Nav

--- a/CSS Folder/style.css
+++ b/CSS Folder/style.css
@@ -4,9 +4,36 @@ body {
     color: white
 }
 
-nav {
-    background-color:white;
-    font-family: 'Shadows Into Light', cursive;
-    margin: 0;
+h1 {
+    text-align:center
     
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color:white;
+    font-size: 25px;
+    text-align: center;
+    
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    
+  }
+  
+  li a:hover {
+    background-color: #111;
+    color: white;
+  }
